kubernetes/apps/database/postgres/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
# postgres instances (AD-023): ingress 5432 only from sure (selfhosted) and the pg_dump
# CronJob; Prometheus scrapes via the cluster-wide ingress-from-prometheus CCNP using the
# inheritedMetadata label on the Cluster.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: selfhosted
            app.kubernetes.io/name: sure
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
            app.kubernetes.io/instance: postgres-backup
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
